Dalsze poprawy